# Proyecto

./: .gitignore  CMakeLists.txt
forms/: devicedialog.ui  mainwindow.ui  registerdialog.ui
include/: databasemanager.h  device.h  devicedialog.h  devicemanager.h  mainwindow.h  registerdialog.h  user.h
resources/: resources.qrc
src/: databasemanager.cpp  device.cpp  devicedialog.cpp  devicemanager.cpp  main.cpp  mainwindow.cpp  registerdialog.cpp  user.cpp
translations/: Proyecto_ALSE_es_CO.ts
